[package]
name = "linguist"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/jay3332/Turbine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.19", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.8.24"
tokio = { version = "1.19.2", features = ["full"] }